# KID_pipeline

./: .gitignore  DT670.py  Dirfile.py  README.md  Target.py  VNA.py  __init__.py  datapaths.py  deprecated_functions.py  functions.py  google_spreadsheet.py  how_to_dirfile.py  pipeline.py  pyproject.toml  script.py  tau_qp.py
.ipynb_checkpoints/: Dirfile-checkpoint.py  MS2034B-checkpoint.py  Target-checkpoint.py  VNA-checkpoint.py  __init__-checkpoint.py  datapaths-checkpoint.py  functions-checkpoint.py  linesS21-checkpoint.ipynb  tau_qp-checkpoint.py
docs/: conf.py
noise/20210604_103127_10000_PToff/: freqs.npy  noise000.npy  noise001.npy  noise002.npy  noise003.npy  noise004.npy  noise005.npy  noise006.npy  noise007.npy  noise008.npy  noise009.npy  noise010.npy  noise011.npy  noise012.npy  noise013.npy  noise014.npy  noise015.npy  noise016.npy  noise017.npy  noise018.npy  noise019.npy  noise020.npy  noise021.npy  noise022.npy  noise023.npy  noise024.npy  noise025.npy  noise026.npy  noise027.npy  noise028.npy  noise029.npy  noise030.npy  noise031.npy  noise032.npy  noise033.npy
src/G31_KID_pipeline/: Dirfile.py  G31_KID_pipeline.py  MS2034B.py  Target.py  VNA.py  __init__.py  datapaths.py  functions.py  google_spreadsheet.py  ipython.html  pipeline_functions.py  tau_qp.py
src/G31_KID_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/KID_pipeline/: __init__.py  paths.py
tests/: example_Target.py  example_VNA.py  script.py
tests/anritsu_MS2034B/: complex_parameters.npy  feedline_1.s2p  freqs.npy
tests/picolog/: 20210601  20210604  20210610  (+5 more)
(+26368 files in other folders)
