[project]
name = "eKID_pipeline"
version = "1.0.0"
authors = [
  { name="Federico Cacciotti},
]
description = "A pipeline for KID data analysis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]