[project]
name = "eKID_pipeline"
version = "1.0.0"
authors = [
  {name="Federico Cacciotti", email="federico.cacciotti@roma1.infn.it" },
]
description = "A pipeline for KID data analysis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/federico-cacciotti/KID_pipeline"
